<resources>
    <string name="app_name">JANUS</string>
    <string name="app_logo">Janus Logo</string>
    <string name="tagline_text">Your Guide Within</string>
    <string name="search_icon">Search icon</string>
    <string name="search_building">WHICH BUILDING ARE YOU IN?</string>
    <string name="welcome">Welcome</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="signup_button">Sign Up</string>
    <string name="menu">Menu</string>
    <string name="search">Search</string>
    <string name="back">Back</string>
    <string name="mic_icon">Mic Icon</string>
    <string name="mall_name">Mall Name</string>
    <string name="search_stalls">Search Rooms</string>
    <string name="stall_name">Stall Name</string>
    <string name="stall_img">Stall Image</string>
    <string name="description">Description</string>
    <string name="mall_map">Mall Map</string>
    <string name="navigate">Navigate</string>
    <string name="navigation_path">Navigation Path</string>
    <string name="map_placeholder">Map Placeholder</string>
    <string name="navigation_drawer_items">Navigation Drawer Items</string>
    <string name="navigation_to_stall">Navigating to %1$s</string>
    <string name="close_menu">Close Menu</string>
    <string name="from">FROM</string>
    <string name="to" >TO</string>
    <string name="current_location">Current Location</string>
    <string name="enter_destination">Enter Destination</string>
    <string name="default_web_client_id">default_web_client_id</string>
    <string name="starting_location">Starting Location</string>
    <string name="select_starting_location">Select your starting location</string>
    <string name="destination">Destination</string>
    <string name="select_destination">Select your destination</string>
    <string name="start_navigation">Start navigation to destination</string>
    <string name="zoom_in">Zoom in map</string>
    <string name="zoom_out">Zoom out map</string>
    <string name="my_location">Go to my current location</string>
    <string name="building_info">Building information</string>
</resources>