<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">
            <ImageView
                android:id="@+id/menu_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/menu"
                android:src="@drawable/menu_icon" />
            <TextView
                android:id="@+id/appName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/app_name"
                android:fontFamily="@font/glacialindifference_bold"
                android:letterSpacing="0.2"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/appName"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/glacialindifference_regular"
                android:text="@string/tagline_text"
                android:letterSpacing="0.2"
                android:textColor="@color/black"
                android:textSize="18sp" />
            <ImageView
                android:id="@+id/back_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/back"
                android:src="@drawable/back_button"
                android:padding="10dp"/>
        </RelativeLayout>
        <FrameLayout
            android:id="@+id/map_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_background"
            android:clipToOutline="true"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/nav_view"
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="16dp"
        tools:ignore="VisualLintBounds">
        <ImageView
            android:id="@+id/close_menu"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/close_menu"
            android:src="@drawable/close_icon" />
        <TextView
            android:id="@+id/nav_rooms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="Rooms"
            android:textSize="20sp"
            android:fontFamily="@font/glacialindifference_bold"
            android:textColor="@color/black"
            android:clickable="true"
            android:focusable="true"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/stallsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:scrollbars="vertical" />
        <TextView
            android:id="@+id/nav_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="Logout"
            android:textSize="18sp"
            android:fontFamily="@font/glacialindifference_bold"
            android:textColor="@color/black"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:background="?attr/selectableItemBackground" />
    </LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>
