<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:gravity="center_horizontal"
    android:padding="16dp">
    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/janus_logo"
        android:contentDescription="@string/app_logo"
        android:scaleType="centerInside"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="25dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Janus"
        android:letterSpacing="0.2"
        android:fontFamily="@font/glacialindifference_bold"
        android:textColor="@color/black"
        android:textAllCaps="true"
        android:textSize="30sp"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="YOUR GUIDE WITHIN"
        android:letterSpacing="0.2"
        android:fontFamily="@font/glacialindifference_regular"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"/>
    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:background="@drawable/rounded_container"
        android:elevation="15dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <TextView
            android:id="@+id/message_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:letterSpacing="0.2"
            android:fontFamily="@font/glacialindifference_bold"
            android:text="@string/signup"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_marginBottom="20dp"
            android:gravity="center"/>
        <EditText
            android:id="@+id/email"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"
            android:background="@drawable/rounded_edittext"
            android:layout_marginBottom="12dp"
            android:padding="10dp"
            android:fontFamily="@font/roboto_regular"/>
        <EditText
            android:id="@+id/password"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:background="@drawable/rounded_edittext"
            android:layout_marginBottom="12dp"
            android:padding="10dp"
            android:fontFamily="@font/roboto_regular"/>
        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:hint="Confirm Password"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:background="@drawable/rounded_edittext"
            android:layout_marginBottom="20dp"
            android:padding="10dp"
            android:fontFamily="@font/roboto_regular"/>
        <Button
            android:id="@+id/signup_button"
            android:layout_width="200dp"
            android:letterSpacing="0.2"
            android:fontFamily="@font/glacialindifference_regular"
            android:layout_height="wrap_content"
            android:text="@string/signup_button"
            android:background="@drawable/rounded_button"
            android:textColor="@color/button_text"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:id="@+id/login_instead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:letterSpacing="0.1"
            android:fontFamily="@font/glacialindifference_regular"
            android:text="Login Instead?"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:clickable="true"
            android:focusable="true"/>
    </LinearLayout>
</LinearLayout>
