<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:layout_gravity="center"
    android:padding="16dp">
    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/janus_logo"
        android:contentDescription="@string/app_logo"
        android:layout_gravity="center_horizontal"
        android:scaleType="centerInside"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="25dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Janus"
        android:letterSpacing="0.2"
        android:fontFamily="@font/glacialindifference_bold"
        android:textColor="@color/black"
        android:textAllCaps="true"
        android:textSize="30sp"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="YOUR GUIDE WITHIN"
        android:letterSpacing="0.2"
        android:fontFamily="@font/glacialindifference_regular"
        android:textColor="@color/black"
        android:textStyle="normal"
        android:textSize="18sp"
        android:layout_gravity="center_horizontal" />
    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="24dp"
        android:background="@drawable/rounded_container"
        android:elevation="15dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_gravity="center">
        <EditText
            android:id="@+id/email"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"
            android:background="@drawable/rounded_edittext"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="16dp"
            android:padding="10dp"
            android:fontFamily="@font/glacialindifference_regular"/>
        <EditText
            android:id="@+id/password"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:background="@drawable/rounded_edittext"
            android:layout_marginBottom="20dp"
            android:padding="10dp"
            android:fontFamily="@font/glacialindifference_regular"/>
        <Button
            android:id="@+id/login_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:background="@drawable/rounded_button"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:letterSpacing="0.2"
            android:fontFamily="@font/glacialindifference_regular"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="10dp">
            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/black"
                android:layout_marginEnd="8dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="OR"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:fontFamily="@font/glacialindifference_regular"
                android:textStyle="bold"
                android:gravity="center"/>
            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/black"
                android:layout_marginStart="8dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New user?"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:fontFamily="@font/glacialindifference_regular"/>
            <TextView
                android:id="@+id/signup_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/glacialindifference_regular"
                android:paddingStart="5dp"
                android:text="Sign Up"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
        <Button
            android:id="@+id/guestButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="Continue as Guest"
            android:background="@drawable/rounded_button"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:letterSpacing="0.2"
            android:fontFamily="@font/glacialindifference_regular"/>
    </LinearLayout>
</LinearLayout>